manifests/flask-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: flask-ingress
spec:
  controller: k8s.io/ingress-nginx
