manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: simple-flask
  name: simple-flask
  namespace: dev
spec:
  containers:
  - image: simple-flask:latest
    imagePullPolicy: Never
    name: simple-flask
    ports:
    - containerPort: 5001
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
