manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-svc
  namespace: dev
spec:
  selector:
    app: simple-flask 
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
