manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-flask-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: simple-flask.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-flask-svc
            port:
              number: 5001
